# simpletreesitter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
autoload/: simpletreesitter.vim
doc/: simpletreesitter.txt
plugin/: simpletreesitter.vim
src/simpletreesitter/: simpletreesitter_daemon.rs
src/simpletreesitter/queries/: bash.scm  bash_symbols.scm  c.scm  c_symbols.scm  cpp.scm  cpp_symbols.scm  go.scm  go_symbols.scm  javascript.scm  js_symbols.scm  mod.rs  python.scm  python_symbols.scm  rust.scm  rust_symbols.scm  vim.scm  vim_symbols.scm
tests/: vim_smoke.vim
