[package]
name = "simpletreesitter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ts-hl-daemon"
path = "src/simpletreesitter/simpletreesitter_daemon.rs"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
[dependencies.tree-sitter-vim9]
git = "https://github.com/beamiter/tree-sitter-vim9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
